--- a/res/style/all.css
+++ b/res/style/all.css
@@ -72,6 +72,15 @@ body {
     --ld: rgb(234, 195, 110);
     --le: rgb(232, 190, 100);
     --lf: rgb(230, 185, 090);
+    --lg: rgb(228, 180, 080);
+    --lh: rgb(226, 175, 070);
+    --li: rgb(224, 170, 060);
+    --lj: rgb(222, 165, 050);
+    --lk: rgb(220, 160, 040);
+    --ll: rgb(218, 155, 030);
+    --lm: rgb(216, 150, 020);
+    --ln: rgb(214, 145, 010);
+    --lo: rgb(212, 140, 000);
 
     --d0: rgb(060, 030, 000);
     --d1: rgb(070, 035, 002);
@@ -130,7 +139,8 @@ header > div > .note {
     display: inline-block;
     font-family: mono;
     margin-top: 0.5cm;
-    padding: 5px 10px;
+    padding: 10px 20px;
+    border-radius: 0.6cm;
     text-align: center;
 }
 
@@ -145,7 +155,8 @@ main {
 
     background-color: var(--l1);
     color: var(--d4);
-    box-shadow: 0 0 6cm var(--l4);
+    box-shadow: 0 0 7cm var(--l9);
+    border-radius: 0.6cm 0 0 0.6cm;
 }
 
 main > div > section h3 {
@@ -217,6 +228,8 @@ section:target {
 
     width: 100%;
     height: 100%;
+
+    overflow: scroll;
 }
 
 .back {
@@ -251,7 +264,8 @@ section:target > a, section:target > a {
 
     background-color: var(--l1);
     color: var(--d4);
-    box-shadow: 0 0 3cm var(--l3);
+    box-shadow: 0 0 4cm var(--l6);
+    border-radius: 0 0 0.6cm 0.6cm;
 }
 
 h3, h4 {
@@ -260,16 +274,16 @@ h3, h4 {
     text-transform: uppercase;
 }
 
-a:hover > h3 > span, a:hover > h4 > span {
+a:hover h3 > span, a:hover h4 > span {
     border-bottom: 4px solid var(--lf);
 }
 
-section:target > a > h3, section:target > a > h4 {
+section:target > a h3, section:target > a h4 {
     display: inline-block;
     margin: 0;
 }
 
-section:target > a > h3 > span, section:target > a > h4 > span {
+section:target > a h3 > span, section:target > a h4 > span {
     display: inline-block;
     vertical-align: middle;
     margin-right: 70px;
@@ -305,11 +319,11 @@ section:target > a > h3 > span, section:target > a > h4 > span {
 
 #introduction:target img {
     object-fit: cover;
-    width: 5.2cm;
-    height: 5.2cm;
+    width: 6cm;
+    height: 6cm;
 
     border-radius: 0.6cm;
-    box-shadow: 0 0 25px var(--l5);
+    box-shadow: 0 0 25px var(--l8);
 }
 
 #introduction:target figure {
@@ -326,7 +340,8 @@ section:target > a > h3 > span, section:target > a > h4 > span {
     text-align: center;
     color: var(--da);
     font-weight: bold;
-    font-size: 110%;
+    font-size: 100%;
+    text-transform: uppercase;
 }
 
 
@@ -392,8 +407,8 @@ tbody {
     margin-right: 1cm;
 
 
-    box-shadow: 0 0 2cm var(--l3);
-    background-color: var(--l1);
+    box-shadow: 0 0 2cm var(--l7);
+    background-color: var(--l2);
 
     padding-left: 0.8cm;
     padding-top: 0.55cm;
@@ -412,8 +427,10 @@ td {
 }
 
 th {
+    font-size: 90%;
     font-weight: bold;
     text-align: right;
+    text-transform: uppercase;
 }
 
 tr:first-child th {
@@ -424,10 +441,34 @@ td span {
     color: var(--df);
 }
 
+address {
+    display: inline-block;
+    border-radius: 0.6cm;
+    box-shadow: 0 0 30px var(--l5);
+    padding: 20px 30px;
+    margin-bottom: 1.1cm;
+    background-color: var(--l1);
+}
+
 address li {
     margin-bottom: 0.6cm;
     font-weight: bold;
-    font-size: 140%;
+    font-size: 160%;
+}
+
+address li:last-child {
+    margin-bottom: 0;
+}
+
+address a {
+    text-decoration: underline;
+    text-decoration-style: dotted;
+    text-decoration-color: var(--lk);
+}
+
+address a:hover {
+    text-decoration-style: solid;
+    text-decoration-color: var(--la);
 }
 
 .socials li {
@@ -437,9 +478,14 @@ address li {
 
 .socials img {
     background-color: var(--l1);
-    box-shadow: 0 0 1cm var(--l4);
+    box-shadow: 0 0 1cm var(--l7);
     border-radius: 100cm;
     height: 1.6cm;
+}
+
+.socials a:hover img {
+    background-color: var(--l2);
+    box-shadow: 0 0 1cm var(--la);
 }
 
 
@@ -470,17 +516,21 @@ address li {
     text-align: center;
 }
 
+#benefits:target > section h4 {
+    line-height: 140%;
+}
+
 #benefits:target > section {
     text-align: left;
     display: inline-block;
     vertical-align: top;
 
-    width: 15.5cm;
-    height: 5cm;
+    width: 16cm;
+    height: 6cm;
 
     margin: 1cm;
 
-    box-shadow: 0 0 40px var(--l3);
+    box-shadow: 0 0 40px var(--l6);
     background-color: var(--l1);
 
     border-radius: 0.6cm;
@@ -498,11 +548,11 @@ address li {
 
 #benefits:target > section > .row:first-child > figure > img {
     object-fit: cover;
-    width: 5cm;
-    height: 5cm;
+    width: 6cm;
+    height: 6cm;
 
     border-radius: 0.6cm;
-    box-shadow: 0 0 40px var(--l3);
+    box-shadow: 0 0 40px var(--l6);
 }
 
 #benefits:target > section > .row:first-child > div {
@@ -513,9 +563,147 @@ address li {
 }
 
 #benefits:target > section > .row:first-child > div > p {
-    font-size: 121%;
+    font-size: 115%;
     text-align: justify;
 }
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+[id^=category]:target > a:first-child figure {
+    display: none;
+}
+
+[id^=category]:target > a:first-child p {
+    display: none;
+}
+
+[id^=category]:target {
+    text-align: center;
+}
+
+[id^=category]:target div.row {
+    display: inline-flex;
+    min-width: 14cm;
+    max-width: 18cm;
+
+    margin: 1cm;
+    text-align: left;
+
+    border-radius: 0.6cm;
+    box-shadow: 0 0 40px var(--l6);
+}
+
+[id^=category]:target div.row figure {
+    width: 6cm;
+    height: 6cm;
+}
+
+[id^=category]:target div.row img {
+    object-fit: cover;
+    width: 6cm;
+    height: 6cm;
+
+    border-radius: 0.6cm;
+    box-shadow: 0 0 40px var(--l6);
+}
+
+[id^=category]:target div.row > div {
+    display: flex;
+    flex-direction: column;
+    flex: auto;
+}
+
+[id^=category]:target h5 {
+    font-size: 220%;
+    padding: 0 20px;
+    padding-top: 20px;
+    padding-bottom: 10px;
+}
+
+[id^=category]:target p {
+    font-size: 120%;
+    margin-bottom: auto;
+    padding: 0 20px;
+    padding-bottom: 20px;
+}
+
+[id^=category]:target div.row > div > div {
+    display: flex;
+    justify-content: flex-end;
+}
+
+[id^=category]:target div.row > div > div > div {
+    display: inline-flex;
+    background-color: var(--l6);
+    box-shadow: 0 0 30px var(--l6);
+    border-radius: 0.6cm;
+    text-transform: uppercase;
+}
+
+[id^=category]:target .book {
+    display: flex;
+    align-items: center;
+    font-size: 120%;
+    font-weight: bold;
+
+    padding: 5px 30px;
+    border-radius: 0.6cm;
+
+    color: var(--l3);
+    background-color: var(--dd);
+    box-shadow: 0 0 20px var(--la);
+}
+
+[id^=category]:target a.book:hover {
+    color: var(--l5);
+    background-color: var(--df);
+    box-shadow: 0 0 25px var(--lc);
+}
+
+[id^=category]:target .price {
+    padding: 10px 20px;
+}
+
+[id^=category]:target .price > :first-child {
+    font-size: 220%;
+    color: var(--d3);
+}
+
+[id^=category]:target .price > :nth-child(2) {
+    font-size: 130%;
+    font-weight: bold;
+    color: var(--d5);
+    vertical-align: top;
+}
+
+[id^=category]:target .price > :last-child {
+    font-size: 120%;
+    color: var(--d7);
+    vertical-align: top;
+}
