--- a/res/style.css
+++ b/res/style.css
@@ -243,12 +243,12 @@ section:target {
   width: 50px;
   height: 50px;
   background-size: 50px;
-  background-image: url("./images/back.svg");
+  background-image: url("./images/vector/back.svg");
   border: 4px solid var(--lf);
 }
 
 .back:hover > span {
-  background-image: url("./images/back.hover.svg");
+  background-image: url("./images/vector/back.hover.svg");
   border-color: var(--de);
 }
 
