--- a/res/style/source.css
+++ b/res/style/source.css
@@ -13,7 +13,7 @@
 
   font-family: main;
   font-display: swap;
-  src: url("./font/fengardoneue_regular-webfont.woff") format("woff");
+  src: url("../font/fengardoneue_regular-webfont.woff") format("woff");
 }
 
 /*****************************************
@@ -243,12 +243,12 @@ section:target {
   width: 50px;
   height: 50px;
   background-size: 50px;
-  background-image: url("./images/vector/back.svg");
+  background-image: url("../images/vector/back.svg");
   border: 4px solid var(--lf);
 }
 
 .back:hover > span {
-  background-image: url("./images/vector/back.hover.svg");
+  background-image: url("../images/vector/back.hover.svg");
   border-color: var(--de);
 }
 
