--- a/res/style/source.css
+++ b/res/style/source.css
@@ -268,8 +268,12 @@ h3,
 h4 {
   font-size: 175%;
   font-weight: bold;
-  text-align: left;
   text-transform: uppercase;
+}
+
+section:target h3,
+section:target h4 {
+  text-align: left;
 }
 
 a:hover h3 > span,
